--- a/Mvn_jen_Integ/pom.xml
+++ b/Mvn_jen_Integ/pom.xml
@@ -35,6 +35,13 @@
     <version>3.141.59</version>
 </dependency>
       
+      <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-core</artifactId>
+    <version>2.1</version>
+    <scope>test</scope>
+</dependency>
       
   </dependencies>
 </project>
